crates/atlas-runtime/tests/snapshots/operator_precedence_modern__precedence_mul_over_add_complex.snap
---
source: crates/atlas-runtime/tests/operator_precedence_modern.rs
expression: "program.items[0]"
---
Statement:
  Expr:
    expr:
      Binary:
        op: Add
        left:
          Binary:
            op: Add
            left:
              Literal:
                - Number: 1
                - start: 0
                  end: 1
            right:
              Binary:
                op: Mul
                left:
                  Literal:
                    - Number: 2
                    - start: 4
                      end: 5
                right:
                  Literal:
                    - Number: 3
                    - start: 8
                      end: 9
                span:
                  start: 4
                  end: 9
            span:
              start: 0
              end: 9
        right:
          Literal:
            - Number: 4
            - start: 12
              end: 13
        span:
          start: 0
          end: 13
    span:
      start: 0
      end: 14
