crates/atlas-runtime/tests/snapshots/operator_precedence_modern__precedence_unary_minus_before_mul.snap
---
source: crates/atlas-runtime/tests/operator_precedence_modern.rs
expression: "program.items[0]"
---
Statement:
  Expr:
    expr:
      Binary:
        op: Mul
        left:
          Unary:
            op: Negate
            expr:
              Literal:
                - Number: 2
                - start: 1
                  end: 2
            span:
              start: 0
              end: 2
        right:
          Literal:
            - Number: 3
            - start: 5
              end: 6
        span:
          start: 0
          end: 6
    span:
      start: 0
      end: 7
